changed polybar colors

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,22 +1,10 @@
 
 [colors]
 background = #99000000
-background-alt = #00242b
-foreground = #ffffff
-primary = #ffffff
-secondary = #8ABEB7
-alert = #fc8362
-disabled = #707880
-0 = #fbf8cc
-1 = #fde4cf
-2 = #ffcfd2
-3 = #f1c0e8
-4 = #cfbaf0
-5 = #a3c4f3
-6 = #90dbf4
-7 = #8eecf5
-8 = #98f5e1
-9 = #b9fbc0
+primary =#fffccf
+alert = #ffaa92
+disabled = #6b6a4e
+
 
 [bar/base]
 width = 100%
@@ -26,7 +14,7 @@ height = 20pt
 dpi = 96
 
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.primary}
 
 line-size = 2pt
 
@@ -75,7 +63,7 @@ label-font = 2
 
 format = <label>
 label = 󰣇
-format-foreground = ${colors.0}
+format-foreground = ${colors.primary}
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -84,14 +72,14 @@ pin-workspaces = true
 
 label-active = %name%
 label-active-font = 0
-label-active-background = ${colors.0}
-label-active-underline= ${colors.0}
+label-active-background = ${colors.primary}
+label-active-underline= ${colors.primary}
 label-active-foreground = #000000
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
-label-occupied-foreground = ${colors.0}
+label-occupied-foreground = ${colors.primary}
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
@@ -106,7 +94,7 @@ type = internal/xwindow
 
 format = <label>
 label = %class%
-format-foreground = ${colors.0}
+format-foreground = ${colors.primary}
 label-maxlen = 50
 
 [module/battery]
@@ -122,17 +110,17 @@ ramp-capacity-2-font = 2
 ramp-capacity-3-font = 2
 
 format-charging = <label-charging>
-format-charging-foreground = ${colors.2}
+format-charging-foreground = ${colors.primary}
 format-charging-prefix = "󰂄 "
-format-charging-prefix-foreground = ${colors.2}
+format-charging-prefix-foreground = ${colors.primary}
 
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-foreground = ${colors.2}
+format-discharging-foreground = ${colors.primary}
 
 format-full = <label-full>
-format-full-foreground = ${colors.2}
+format-full-foreground = ${colors.primary}
 format-full-prefix = "󰁹 "
-format-full-prefix-foreground = ${colors.2}
+format-full-prefix-foreground = ${colors.primary}
 
 ramp-capacity-0 = "󰁺"
 ramp-capacity-1 = "󰁼"
@@ -148,9 +136,9 @@ use-actual-brightness = true
 format-prefix-font = 2
 
 format-label = <label>
-label-foreground = ${colors.2}
+label-foreground = ${colors.primary}
 format-prefix = "󰖨 "
-format-prefix-foreground = ${colors.2}
+format-prefix-foreground = ${colors.primary}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -159,14 +147,14 @@ format-volume-prefix-font = 2
 label-muted-font = 2
 
 format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.3}
+format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
-format-volume-foreground = ${colors.3}
+format-volume-foreground = ${colors.primary}
 
 label-volume = %percentage%%
 
 label-muted = " "
-label-muted-foreground = ${colors.3}
+label-muted-foreground = ${colors.disabled}
 
 [module/bluetooth]
 type=custom/script
@@ -175,7 +163,7 @@ interval = 2
 click-left = exec blueman-manager
 click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
 format-padding = 1
-format-foreground = ${colors.4}
+format-foreground = ${colors.primary}
 font = 2
 width = 150
 format = <label>
@@ -188,9 +176,9 @@ interval = 2
 
 format-prefix-font = 2
 format-prefix = "  "
-format-prefix-foreground = ${colors.5}
+format-prefix-foreground = ${colors.primary}
 label = %used%
-label-foreground = ${colors.5}
+label-foreground = ${colors.primary}
 
 [module/cpu]
 type = internal/cpu
@@ -198,11 +186,11 @@ interval = 2
 
 format-prefix-font = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.6}
+format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 label-warn = %percentage:2%%
 label-warn-foreground = ${colors.alert}
-label-foreground = ${colors.6}
+label-foreground = ${colors.primary}
 
 ; [network-base]
 ; type = internal/network
@@ -221,9 +209,9 @@ format-connected-prefix-font = 2
 label-disconnected-font = 2
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-foreground = ${colors.7}
+format-connected-foreground = ${colors.primary}
 label-connected = %signal%% %essid% 
-label-connected-foreground = ${colors.7}
+label-connected-foreground = ${colors.primary}
 
 ramp-signal-0 = 󰤟
 ramp-signal-1 = 󰤢
@@ -233,7 +221,7 @@ ramp-signal-4 = 󰤥
 ramp-signal-5 = 󰤨
 
 label-disconnected = 󰤭
-label-disconnected-foreground = ${colors.7}
+label-disconnected-foreground = ${colors.primary}
 
 [module/date]
 type = internal/date
@@ -246,8 +234,8 @@ format-prefix-font = 2
 format-prefix = "󰥔 "
 
 format = <label>
-format-foreground = ${colors.8}
-format-prefix-foreground = ${colors.8}
+format-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.primary}
 
 label = %date% %time%
 
@@ -256,7 +244,7 @@ type = custom/script
 exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|Paused)$"" 
 exec = echo " " 
 click-left = "playerctl previous --player spotify"
-format-foreground = ${colors.0}
+format-foreground = ${colors.primary}
 format-font = 2
 
 [module/next] 
@@ -264,7 +252,7 @@ type = custom/script
 exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|Paused)$""
 exec = echo " " 
 click-left = "playerctl next --player spotify"
-format-foreground = ${colors.0}
+format-foreground = ${colors.primary}
 format-font = 2
 
 [module/spotify] 
@@ -273,12 +261,12 @@ exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|P
 exec  = "playerctl metadata --player spotify --format "{{ title }}"" 
 interval = 1
 click-left = "playerctl play-pause --player spotify"
-format-foreground = ${colors.0}
+format-foreground = ${colors.primary}
 
 [module/powermenu]
 type = custom/text
 content = ""
-content-foreground = ${colors.0}
+content-foreground = ${colors.primary}
 content-padding = 1
 click-left = "~/.config/i3/scripts/power-menu.sh"
 
@@ -289,7 +277,7 @@ interval = 10
 warn-percentage = 75
 format-font = 2
 format-mounted = <label-mounted>
-label-mounted-foreground = ${colors.5}
+label-mounted-foreground = ${colors.primary}
 label-mounted = 󰝰 %mountpoint% %percentage_used%%
 format-warn = <label-warn>
 label-warn-foreground = ${colors.alert}
@@ -301,7 +289,7 @@ exec = ~/.config/polybar/scripts/polybar-updates-reader.sh
 interval = 600
 format = <label>
 label = %output%
-label-foreground = ${colors.2}
+label-foreground = ${colors.primary}
 click-left = alacritty -e 'yay -Syu'
 click-right = ~/.config/polybar/scripts/check-updates-service.sh && ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
 
