--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,6 +12,7 @@ blur-background-exclude = [
     "class_g = 'Maim'",
     "class_g = 'slop'",
     "class_g = 'Cursor'",
+    "class_g = 'Polybar'",
     "window_type = 'menu'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'",
