modified interval of reads to updates service log

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -286,12 +286,11 @@ label-warn =  %mountpoint% %percentage_used%%
 [module/updates]
 type = custom/script
 exec = ~/.config/polybar/scripts/polybar-updates-reader.sh
-interval = 600
+interval = 5 
 format = <label>
 label = %output%
 label-foreground = ${colors.primary}
-click-left = alacritty -e 'yay -Syu'
-click-right = ~/.config/polybar/scripts/check-updates-service.sh && ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
+click-left = ~/.config/polybar/scripts/check-updates-service.sh && ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
 
 [settings]
 screenchange-reload = true
