--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -34,7 +34,7 @@ font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
 modules-center = previous spotify next
-modules-right = updates battery backlight pulseaudio bluetooth filesystem memory cpu wlan date powermenu
+modules-right = updates battery backlight pulseaudio bluetooth filesystem memory cpu temperature wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -291,6 +291,36 @@ format = <label>
 label = %output%
 label-foreground = ${colors.primary}
 click-left = ~/.config/polybar/scripts/check-updates-service.sh && ~/.config/polybar/scripts/polybar-updates-reader.sh refresh
+
+[module/temperature]
+type = internal/temperature
+interval = 0.5
+
+thermal-zone = 0
+
+zone-type = acpitz
+
+hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon6/temp1_input
+
+base-temperature = 20
+
+warn-temperature = 80
+units = true
+format = <ramp> <label>
+label = %temperature-c%
+label-foreground = ${colors.primary}
+
+format-warn = <ramp> <label-warn>
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.alert}
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+
+ramp-0-foreground = ${colors.primary}
+ramp-1-foreground = ${colors.primary}
+ramp-2-foreground = ${colors.alert}
 
 [settings]
 screenchange-reload = true
