--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -34,7 +34,7 @@ font-1 = FiraCode Nerd Font:size=10;1
 
 modules-left = xworkspaces xwindow
 modules-center = previous spotify next
-modules-right = updates battery backlight pulseaudio bluetooth filesystem memory cpu temperature wlan date powermenu
+modules-right = updates battery backlight pulseaudio bluetooth filesystem memory cpu temperature wlan ethernet date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -223,6 +223,20 @@ ramp-signal-5 = 󰤨
 label-disconnected = 󰤭
 label-disconnected-foreground = ${colors.primary}
 
+[module/ethernet]
+type = internal/network
+interface = enp4s0
+interval = 3.0
+
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.primary}
+label-connected = %netspeed%
+label-connected-foreground = ${colors.primary}
+
+format-disconnected = <label-disconnected>
+label-disconnected = 󰈂
+label-disconnected-foreground = ${colors.disabled}
+
 [module/date]
 type = internal/date
 interval = 1
@@ -261,6 +275,9 @@ exec-if = "playerctl status --player spotify 2>/dev/null | grep -Eq "^(Playing|P
 exec  = "playerctl metadata --player spotify --format "{{ title }}"" 
 interval = 1
 click-left = "playerctl play-pause --player spotify"
+format = <label>
+label = %output%
+label-maxlen = 55
 format-foreground = ${colors.primary}
 
 [module/powermenu]
