feat/hyprland: config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,0x0,1
+monitor=HDMI-A-1,2560x1440@143.91Hz,0x-1440,1
 
 
 ###################
@@ -25,7 +26,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -50,7 +51,6 @@ $menu = wofi --show drun
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -157,7 +157,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -177,8 +177,11 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
+    repeat_rate = 20
+    repeat_delay = 200
+
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
