--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,7 +1,7 @@
 
 [colors]
 background = #00000000
-primary =#fffccf
+primary =#ffffff
 alert = #ffaa92
 disabled = #6b6a4e
 
@@ -226,11 +226,11 @@ label-disconnected-foreground = ${colors.primary}
 [module/ethernet]
 type = internal/network
 interface = enp4s0
-interval = 3.0
+interval = 1.0
 
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.primary}
-label-connected = %netspeed%
+label-connected = %local_ip%
 label-connected-foreground = ${colors.primary}
 
 format-disconnected = <label-disconnected>
