feat/i3: ui customization

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -23,28 +23,10 @@ blur-background-exclude = [
 blur-method = "dual_kawase";
 blur-strength = 10;
 
-corner-radius = 5;
+corner-radius = 12;
+detect-rounded-corners = true;
 round-corners = 1;
 
 rounded-corners-exclude = [
     "class_g = 'Polybar'",
 ];
-
-shadow = true;
-shadow-radius = 20;
-shadow-opacity = 0.5;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-
-shadow-exclude = [
-    "class_g = 'i3bar'",
-    "class_g = 'dmenu'",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "class_g = 'Polybar'",
-    "window_type = 'menu'",
-    "window_type = 'dropdown_menu'",
-    "window_type = 'popup_menu'",
-    "window_type = 'tooltip'",
-    "window_type = 'utility'",
-];
-
