feat/hyprland: moved to hyprland and rice it up

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,8 +15,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,0x0,1
-monitor=HDMI-A-1,2560x1440@143.91Hz,0x-1440,1
+monitor=eDP-1,preferred,320x1440,1
+monitor=HDMI-A-1,2560x1440@143.91Hz,0x0,1
 
 
 ###################
@@ -27,8 +27,8 @@ monitor=HDMI-A-1,2560x1440@143.91Hz,0x-1440,1
 
 # Set programs that you use
 $terminal = /home/galeano/.cargo/bin/alacritty
-$fileManager = dolphin
-$menu = wofi --show drun
+$fileManager = nemo
+$menu = ~/.config/rofi/launchers/type-1/launcher.sh
 
 
 #################
@@ -38,9 +38,14 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = hyprpaper
+
+exec-once = waybar
+exec-once = dunst
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
+exec-once = dex --autostart --environment Hyprland
 
 
 #############################
@@ -61,13 +66,13 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 15
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(255,255,255,0.6)
+    col.inactive_border = rgba(255,255,255,0)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -87,7 +92,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -96,8 +101,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 8
+        passes = 4
 
         vibrancy = 0.1696
     }
@@ -130,7 +135,10 @@ animations {
     animation = fadeLayersOut, 1, 1.39, almostLinear
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade,
+    layerrule = blur, logout_dialog
+    layerrule = blur, rofi
+
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -168,17 +176,13 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = es
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
-    repeat_rate = 20
-    repeat_delay = 200
+    repeat_rate = 50
+    repeat_delay = 300
 
     touchpad {
         natural_scroll = true
@@ -203,59 +207,55 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mod = ALT # Sets "Windows" key as main modifier
+$mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mod, RETURN, exec, $terminal
+bind = $mod SHIFT, Q, killactive,
+bind = $mod, M, exec, wlogout
+bind = $mod, E, exec, $fileManager
+bind = $mod, V, togglefloating,
+bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
+bind = $mod, D, exec, $menu
+bind = $mod, P, pseudo, # dwindle
+bind = $mod, J, togglesplit, # dwindle
+bind = $mod SHIFT, B, exec, ~/.config/waybar/launch.sh
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mod, H, movefocus, l
+bind = $mod, J, movefocus, d
+bind = $mod, K, movefocus, u
+bind = $mod, L, movefocus, r
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mod SHIFT, H, movewindow, l
+bind = $mod SHIFT, J, movewindow, d
+bind = $mod SHIFT, K, movewindow, u
+bind = $mod SHIFT, L, movewindow, r
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mod, F, fullscreen, 0 # 0 toggles, 1 fullscreen, 2 maximize
+
+bind = $mod SHIFT, X, exec, swaylock -f -c 000000
+
+bind = $mod SHIFT, C, exec, hyprctl reload
+
+bind = $mod SHIFT, R, exec, hyprctl dispatch exit
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mod, S, togglespecialworkspace, magic
+bind = $mod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mod, mouse_down, workspace, e+1
+bind = $mod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
+
+# Screenshots
+# Requires: grim, slurp, wl-clipboard
+bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -275,6 +275,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
+source = ~/.config/hypr/workspace.conf
+
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
@@ -289,3 +291,4 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrulev2 = noblur, floating:1
