feat/waybar: more waybar customization

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -103,7 +103,6 @@ decoration {
         enabled = true
         size = 8
         passes = 4
-
         vibrancy = 0.1696
     }
 }
@@ -138,7 +137,7 @@ animations {
     animation = workspacesOut, 1, 1.94, almostLinear, fade,
     layerrule = blur, logout_dialog
     layerrule = blur, rofi
-
+    layerrule = blur, waybar-tooltip
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
