feat/hyprlock: swaylock changed to hyprlock

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = hyprpaper
 
 exec-once = waybar
 exec-once = dunst
+exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
@@ -234,11 +235,9 @@ bind = $mod SHIFT, L, movewindow, r
 
 bind = $mod, F, fullscreen, 0 # 0 toggles, 1 fullscreen, 2 maximize
 
-bind = $mod SHIFT, X, exec, swaylock -f -c 000000
+bind = $mod SHIFT, X, exec, hyprlock
 
 bind = $mod SHIFT, C, exec, hyprctl reload
-
-bind = $mod SHIFT, R, exec, hyprctl dispatch exit
 
 # Example special workspace (scratchpad)
 bind = $mod, S, togglespecialworkspace, magic
