--- a/wlogout/.config/wlogout/config
+++ b/wlogout/.config/wlogout/config
@@ -1,6 +1,6 @@
 Shutdown = systemctl poweroff
 Reboot = systemctl reboot
-Lock = swaylock
+Lock = hyprlock
 Logout = loginctl terminate-session ${XDG_SESSION_ID}
 Suspend = systemctl suspend
 Hibernate = systemctl hibernate
