feat/cursors: Cursor changed

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -55,8 +55,10 @@ exec-once = dex --autostart --environment Hyprland
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,20
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_SIZE,20
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 
 #####################
 ### LOOK AND FEEL ###
@@ -168,6 +170,11 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
+cursor {
+
+  no_hardware_cursors = true
+
+}
 
 #############
 ### INPUT ###
