--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@
 background {
     monitor =
     path = screenshot
-    blur_passes = 2
+    blur_passes = 3
     color = rgba(26, 26, 26, 1)
 }
 
@@ -18,6 +18,7 @@ label {
     monitor =
     text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
     color = rgba(216, 222, 233, 0.70)
+    text-shadow = rgba(0, 0, 0, 0.8)
     font_size = 25
     font_family = SF Pro Display Bold
     position = 0, 150
