--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -29,7 +29,7 @@ label {
 # Time
 label {
     monitor =
-    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+    text = cmd[update:1000] echo "<span>$(date +"$TIME")</span>"
     color = rgba(216, 222, 233, 0.70)
     font_size = 120
     font_family = SF Pro Display Bold
