--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -17,19 +17,19 @@ listener {
     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
 }
 
-listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
-}
+# listener {
+#     timeout = 240
+#     on-timeout = ~/.config/hypr/scripts/screensaver.sh  # start screensaver after 4min.
+#     on-resume = pkill -9 mpv                             # kill screensaver when activity is
+# }
+
+# listener {
+#     timeout = 300                                 # 5min
+#     on-timeout = loginctl lock-session            # lock screen when timeout has passed
+# }
 
 listener {
     timeout = 330                                                     # 5.5min
     on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
 }
-
-listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
-}
-
