feat/waybar: new waybar style

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,7 +28,8 @@ monitor=HDMI-A-1,2560x1440@143.91Hz,0x0,1
 # Set programs that you use
 $terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = nemo
-$menu = rofi -show drun
+$menu = rofi -modi drun -show drun
+$emoji = rofi -modi emoji -show emoji
 
 #################
 ### AUTOSTART ###
@@ -68,7 +69,7 @@ env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 15
+    gaps_out = 10
 
     border_size = 2
 
@@ -218,7 +219,7 @@ $mainMod = SUPER
 bind = $mod, RETURN, exec, $terminal
 bind = $mod SHIFT, Q, killactive,
 bind = $mod, M, exec, wlogout
-bind = $mod, E, exec, $fileManager
+bind = $mod, E, exec, $emoji
 bind = $mod, V, togglefloating,
 bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mod, D, exec, $menu
