--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -140,6 +140,8 @@ animations {
     animation = workspacesOut, 1, 1.94, almostLinear, fade,
     layerrule = blur, logout_dialog
     layerrule = blur, waybar-tooltip
+    layerrule = blur, notifications
+    layerrule = blur, dunst
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -261,12 +263,14 @@ bindm = $mod, mouse:273, resizewindow
 bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
+bindel = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh down
+bindel = ,XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh mute
+
+bindel = ,XF86AudioMicMute, exec, ~/.config/hypr/scripts/microphone.sh
+
+bindel = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh up
+bindel = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh down
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -296,3 +300,5 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrulev2 = noblur, floating:1
 windowrulev2 = noborder,class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = noinitialfocus, class:^(jetbrains-studio), title:^(win.*)
+windowrulev2 = noblur, class:^(jetbrains-idea)
