--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,20 +3,20 @@
 TERM = "xterm-256color"
 # font
 [font]
-size = 10
+size = 12
 
 [font.bold]
-family = "MesloLGS Nerd Font"
+family = "JetBrains Mono Nerd Font"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.italic]
-family = "MesloLGS Nerd Font"
+family = "JetBrains Mono Nerd Font"
 
 [font.normal]
-family = "MesloLGS Nerd Font"
+family = "JetBrains Mono Nerd Font"
 
 [font.offset]
 x = 0
