--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Papirus
-gtk-font-name=Cantarell 11
+gtk-font-name=JetBrains Mono Nerd Font 14
 gtk-cursor-theme-name=Bibata-Modern-Classic
 gtk-cursor-theme-size=20
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
