--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -293,3 +293,5 @@ windowrulev2 = noblur, floating:1
 windowrulev2 = noborder,class:^(Xdg-desktop-portal-gtk)$
 windowrulev2 = noinitialfocus, class:^(jetbrains-studio), title:^(win.*)
 windowrulev2 = noblur, class:^(jetbrains-idea)
+windowrulev2 = float, class:^(jetbrains-.*),title:^(win.*)
+windowrulev2 = noinitialfocus, class:^(jetbrains-.*)
