--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = nemo
 $menu = rofi -modi drun -show drun
 $emoji = rofi -modi emoji -show emoji
+$browser = google-chrome-stable
 
 #################
 ### AUTOSTART ###
@@ -219,6 +220,7 @@ bind = $mod, D, exec, $menu
 bind = $mod, P, pseudo, # dwindle
 bind = $mod, J, togglesplit, # dwindle
 bind = $mod SHIFT, B, exec, ~/.config/waybar/launch.sh
+bind = $mod, B, exec, $browser
 
 # Move focus with mainMod + arrow keys
 bind = $mod, H, movefocus, l
