--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,320x1440,1
 monitor=HDMI-A-1,2560x1440@143.91Hz,0x0,1
+# monitor=HDMI-A-1,3840x2160@60.00Hz,0x0,2
 
 
 ###################
@@ -175,7 +176,7 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = es
+    # kb_layout = es
 
     follow_mouse = 1
 
@@ -198,6 +199,11 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+
+device {
+    name = at-translated-set-2-keyboard
+    enabled = false
 }
 
 
