added international us keyboard layout to support ñáéíóúü¿¡

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -176,7 +176,8 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    # kb_layout = es
+    kb_layout = us
+    kb_variant = intl
 
     follow_mouse = 1
 
@@ -219,7 +220,7 @@ $mainMod = SUPER
 bind = $mod, RETURN, exec, $terminal
 bind = $mod SHIFT, Q, killactive,
 bind = $mod, M, exec, wlogout
-bind = $mod, E, exec, $emoji
+bind = $mod SHIFT, E, exec, $emoji
 bind = $mod, V, togglefloating,
 bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mod, D, exec, $menu
@@ -246,8 +247,8 @@ bind = $mod SHIFT, X, exec, hyprlock
 bind = $mod SHIFT, C, exec, hyprctl reload
 
 # Example special workspace (scratchpad)
-bind = $mod, S, togglespecialworkspace, magic
-bind = $mod SHIFT, S, movetoworkspace, special:magic
+# bind = $mod, S, togglespecialworkspace, magic
+# bind = $mod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mod, mouse_down, workspace, e+1
@@ -259,7 +260,7 @@ bindm = $mod, mouse:273, resizewindow
 
 # Screenshots
 # Requires: grim, slurp, wl-clipboard
-bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
