--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -177,7 +177,7 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant = intl
+    kb_variant = altgr-intl
 
     follow_mouse = 1
 
