change togglesplit keybinding key binding to S because J was being overriden

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -225,7 +225,7 @@ bind = $mod, V, togglefloating,
 bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mod, D, exec, $menu
 bind = $mod, P, pseudo, # dwindle
-bind = $mod, J, togglesplit, # dwindle
+bind = $mod, S, togglesplit, # dwindle
 bind = $mod SHIFT, B, exec, ~/.config/waybar/launch.sh
 bind = $mod, B, exec, $browser
 
