Added ngw-displays support for hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -13,11 +13,8 @@
 ################
 ### MONITORS ###
 ################
+source = ~/.config/hypr/monitors.conf
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,320x1440,1
-monitor=HDMI-A-1,2560x1440@143.91Hz,0x0,1
-# monitor=HDMI-A-1,3840x2160@60.00Hz,0x0,2
 
 
 ###################
@@ -31,7 +28,7 @@ $terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = nemo
 $menu = rofi -modi drun -show drun
 $emoji = rofi -modi emoji -show emoji
-$browser = google-chrome-stable
+$browser = vivaldi-stable
 
 #################
 ### AUTOSTART ###
