--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -85,6 +85,10 @@ general {
     layout = dwindle
 }
 
+xwayland {
+  force_zero_scaling = true
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
