--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ $browser = vivaldi-stable
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = hyprpaper
+exec-once = swww-daemon
 
 exec-once = waybar
 exec-once = dunst
@@ -46,6 +46,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 exec-once = dex --autostart --environment Hyprland
+exec-once = waytrogen --restore
 
 
 #############################
@@ -262,6 +263,8 @@ bindm = $mod, mouse:273, resizewindow
 # Screenshots
 # Requires: grim, slurp, wl-clipboard
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
+bind = $mod, W, exec, waytrogen
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
