--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ $terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = nemo
 $menu = rofi -modi drun -show drun
 $emoji = rofi -modi emoji -show emoji
-$browser = vivaldi-stable
+$browser = google-chrome-stable
 
 #################
 ### AUTOSTART ###
@@ -47,6 +47,7 @@ exec-once = wl-paste --type image --watch cliphist store
 
 exec-once = dex --autostart --environment Hyprland
 exec-once = waytrogen --restore
+exec-once = kdeconnect-indicator
 
 
 #############################
@@ -92,7 +93,7 @@ xwayland {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
