--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,21 +1,9 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
-
 ################
 ### MONITORS ###
 ################
 source = ~/.config/hypr/monitors.conf
 
-
+source = ~/.config/hypr/mocha.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -69,15 +57,14 @@ env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 2
-    gaps_out = 5
+    gaps_in = 5
+    gaps_out = 10
 
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(255,255,255,0.8)
-    col.inactive_border = rgba(255,255,255,0)
-
+    col.active_border = $mauve
+    col.inactive_border = $overlay0
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
@@ -103,7 +90,7 @@ decoration {
         enabled = false
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $crust
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -123,7 +110,7 @@ animations {
     bezier = md3_decel, 0.05, 0.7, 0.1, 1
     bezier = md3_accel, 0.3, 0, 0.8, 0.15
     bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
     bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
     bezier = fluent_decel, 0.1, 1, 0, 1
     bezier = easeInOutCirc, 0.85, 0, 0.15, 1
