swaync as replacement for dunst

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ $browser = google-chrome-stable
 exec-once = swww-daemon
 
 exec-once = waybar
-exec-once = dunst
+exec-once = swaync
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
@@ -124,7 +124,6 @@ animations {
     layerrule = blur, logout_dialog
     layerrule = blur, waybar-tooltip
     layerrule = blur, notifications
-    layerrule = blur, dunst
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
