--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -21,7 +21,8 @@
         "memory",
         "custom/updates",
         "battery",
-        "network"
+        "network",
+        "custom/notification"
       ]
     },
 
