--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,8 +14,7 @@ source = ~/.config/hypr/mocha.conf
 # Set programs that you use
 $terminal = /home/galeano/.cargo/bin/alacritty
 $fileManager = nemo
-$menu = rofi -modi drun -show drun
-$emoji = rofi -modi emoji -show emoji
+$menu = nc -U /run/user/1000/walker/walker.sock
 $browser = google-chrome-stable
 
 #################
@@ -36,6 +35,7 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = dex --autostart --environment Hyprland
 exec-once = waytrogen --restore
 exec-once = kdeconnect-indicator
+exec-once = walker --gapplication-service
 
 
 #############################
@@ -80,7 +80,7 @@ xwayland {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
+    rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -211,7 +211,6 @@ bind = $mod SHIFT, Q, killactive,
 bind = $mod, M, exec, wlogout
 bind = $mod SHIFT, E, exec, $emoji
 bind = $mod, V, togglefloating,
-bind = $mainMod, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mod, D, exec, $menu
 bind = $mod, P, pseudo, # dwindle
 bind = $mod, S, togglesplit, # dwindle
