--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -36,6 +36,7 @@ exec-once = dex --autostart --environment Hyprland
 exec-once = waytrogen --restore
 exec-once = kdeconnect-indicator
 exec-once = walker --gapplication-service
+exec-once = nm-applet
 
 
 #############################
